--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -5,6 +5,12 @@
         <script src="script.js"></script>
     </head>
     <body>
-
+<script>
+/* this is a comment
+*/
+var x = 5;
+var firstname = "ted";
+document.write(y);
+</script>
     </body>
 </html>
