--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
 <script>
-/* this is a comment
-*/
-var x = 5;
-var firstname = "ted";
-document.write(y);
+
+var myFirstName = "Steve";
+
+var myFullName = myFirstName + " " + myLastName;
+console.log("My name is " + myFullName + "." )
 </script>
     </body>
 </html>
