--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>week 1 hello world</title>
+        <title>!Week 1 hello world</title>
         <script src="script.js"></script>
     </head>
     <body>
