Saved file this time

--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>!Week 1 hello world</title>
+        <title>Week 1 hello world</title>
         <script src="script.js"></script>
     </head>
     <body>
@@ -10,7 +10,7 @@
 var myFirstName = "Steve";
 
 var myFullName = myFirstName + " " + myLastName;
-console.log("My name is " + myFullName + "." )
+console.log("My name is " + myFullName + "!" )
 </script>
     </body>
 </html>
