--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -35,12 +35,12 @@
                 }
             }
             
-            document.write("<ul><li><b>Total reports:</b> " + crime_stats.length)
+            document.write("<ul><li><b>Total reports:</b> " + crime_stats.length);
             document.write("<ul><li><b>Precincts:</b> " + precincts);
             document.write("<ul><li><b>Crime Types:</b> " + crime_types);
-            document.write("<ul><li><b>Months:</b> " + months)
-            document.write("<ul><li><b>Homicides:</b> " + homicide_by_month)
-            document.write("</ul>")
+            document.write("<ul><li><b>Months:</b> " + months);
+            document.write("<ul><li><b>Homicides:</b> " + homicide_by_month);
+            document.write("</ul>");
             
         </script>
 
