--- a/assignment-5/validation_hw.html
+++ b/assignment-5/validation_hw.html
@@ -35,6 +35,7 @@ else if (isValidPassword(password) == false){
   message.innerHTML = "invalid password";
 }
   else {
+    message.innerHTML("thank you")
 
   // write appropriate message to the web page, depending on whether entries are valid
 
