--- a/assignment-6/index.html
+++ b/assignment-6/index.html
@@ -60,21 +60,21 @@ var spans = $("span");
 
 //2. Find all tags with a class of "severe" and store the result
 
-var severe = $('.severe')
+var severe = $('.severe');
 
 //3. Find the element with an id of "warnings"
 
-var warnings = $('#warnings')
+var warnings = $('#warnings');
 
 //4. Find the <li> tags located inside of the element with ID of "warnings"
 
-var warningItems = $('#warnings > li');
+var warningItems = $('#warnings li');
 //5. Find the <ul> tag that contains an element with a class of "mild"
 
-var ul = $('ul > .mild');
+var ul = $('ul:has[.mild]');
 //6. Find all spans with a "data-x" attribute
 
-var dataX = $('spans[data-x]');
+var dataX = $('span[data-x]');
 //7. Change the elements with a class of "purple" to have a background of "magenta"
 $('.purple').css('background','magenta');
 
@@ -82,7 +82,7 @@ $('.purple').css('background','magenta');
 $('.continent').html('Australia');
 
 //9. Add a class of "stripe" to all odd-numbered list items inside section tags
-
+$('section li:odd').addClass('stripe');
 
 //10. Remove the class of "facts" from the <main> element
 $("main").removeClass("facts");
